<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/care_giver_tittle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:text="@string/care_giver"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/admin_registration_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_registration"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/care_giver_tittle_tv"
        app:layout_constraintTop_toBottomOf="@+id/care_giver_tittle_tv" />

    <EditText
        android:id="@+id/register_username_edt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/username_drawable_selector"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/pink_500"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_registration_title_tv" />

    <EditText
        android:id="@+id/register_gmail_Phone_edt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/phone_gmail_drawable_selector"
        android:drawablePadding="10dp"
        android:hint="@string/gmail_or_phone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/pink_500"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username_edt"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/register_password_edt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/password_drawable_selector"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/pink_500"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_gmail_Phone_edt" />

    <EditText
        android:id="@+id/register_confirm_password_edt"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:drawableStart="@drawable/password_drawable_selector"
        android:drawablePadding="10dp"
        android:hint="@string/confirmed_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/pink_500"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_edt" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:theme="@style/Theme.SignInUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password_edt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/already_registered"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

    <TextView
        android:id="@+id/register_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        android:textColor="@color/pink_500" />
</androidx.constraintlayout.widget.ConstraintLayout>