<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/search_view_shape"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search"
        android:textCursorDrawable="@null"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/firstAidRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:listitem="@layout/first_aid_item_layout" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/pink_500"
        android:text="@string/actions"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/registration_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/registration"
        android:src="@drawable/ic_baseline_person_add_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab" />

    <TextView
        android:id="@+id/registration_fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="@+id/registration_fab"
        app:layout_constraintEnd_toStartOf="@+id/registration_fab"
        app:layout_constraintTop_toTopOf="@+id/registration_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_newsfeed_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_news_feed"
        android:src="@drawable/ic_baseline_add_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/registration_fab"
        app:layout_constraintEnd_toEndOf="@+id/registration_fab" />

    <TextView
        android:id="@+id/add_newsfeed_fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_news_feed"
        app:layout_constraintBottom_toBottomOf="@+id/add_newsfeed_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_newsfeed_fab"
        app:layout_constraintTop_toTopOf="@+id/add_newsfeed_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/set_alarm_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/set_alarm_time"
        android:src="@drawable/ic_baseline_add_alarm_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_newsfeed_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_newsfeed_fab" />

    <TextView
        android:id="@+id/set_alarm_fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/set_alarm_time"
        app:layout_constraintBottom_toBottomOf="@+id/set_alarm_fab"
        app:layout_constraintEnd_toStartOf="@+id/set_alarm_fab"
        app:layout_constraintTop_toTopOf="@+id/set_alarm_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_hospital_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/search_hospital"
        android:src="@drawable/ic_baseline_search_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/set_alarm_fab"
        app:layout_constraintEnd_toEndOf="@+id/set_alarm_fab" />

    <TextView
        android:id="@+id/search_hospital_fab_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/search_hospital"
        app:layout_constraintBottom_toBottomOf="@+id/search_hospital_fab"
        app:layout_constraintEnd_toStartOf="@+id/search_hospital_fab"
        app:layout_constraintTop_toTopOf="@+id/search_hospital_fab" />
</androidx.constraintlayout.widget.ConstraintLayout>